--- a/style.css
+++ b/style.css
@@ -2,4 +2,4 @@
 
 .container {background-color : Gray;}
 
-body {background-image:url('.jpg');}
+body {background-image:url('https://f.cloud.github.com/assets/5040652/956058/5b87819a-0436-11e3-8500-07f0d2d9af1b.jpg');}
