--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {background-image:url('https://f.cloud.github.com/assets/5040652/956058/5b87819a-0436-11e3-8500-07f0d2d9af1b.jpg');}
+body {background-image:url('https://f.cloud.github.com/assets/5040652/964496/1a14d578-0517-11e3-9263-cba48274f12c.png');}
 
 .container {background-color : Gray;}
 
