--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {background-image:url('https://f.cloud.github.com/assets/5040652/964496/1a14d578-0517-11e3-9263-cba48274f12c.png');}
+body {background-image:url('https://f.cloud.github.com/assets/5040652/964614/49f85222-0519-11e3-963b-19f95b95297f.jpg');}
 
 .container {background-color : Gray;}
 
