--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {background-image:url('https://f.cloud.github.com/assets/5040652/964614/49f85222-0519-11e3-963b-19f95b95297f.jpg');}
+body {https://f.cloud.github.com/assets/5040652/962804/74860b56-04f6-11e3-901a-f530a30884f0.jpg);}
 
 .container {background-color : Gray;}
 
